WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250426
Null pointer web content crash in AsyncScrollingCoordinator callback
https://bugs.webkit.org/show_bug.cgi?id=250426
Summary
Null pointer web content crash in AsyncScrollingCoordinator callback
Richard Robinson
Reported
2023-01-10 16:42:15 PST
rdar://104099969
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-01-10 16:45:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8498
EWS
Comment 2
2023-01-11 10:21:11 PST
Committed
258792@main
(d1c80025c33e): <
https://commits.webkit.org/258792@main
> Reviewed commits have been landed. Closing PR #8498 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug