Null pointer web content crash in AsyncScrollingCoordinator callback https://bugs.webkit.org/show_bug.cgi?id=250426 rdar://104099969

Reviewed by Simon Fraser.

Adds a null check for `m_page` in the hysteresis callback of `AsyncScrollingCoordinator`.

* Source/WebCore/page/scrolling/AsyncScrollingCoordinator.cpp:
(WebCore::AsyncScrollingCoordinator::hysterisisTimerFired):

Canonical link: https://commits.webkit.org/258792@main